# RK

./: CMakeLists.txt  main.cpp
.github/workflows/: build.yml
include/: Computer.h  ComputerFactories.h  ConcreteComputers.h
src/: Computer.cpp  ComputerFactories.cpp  ConcreteComputers.cpp
tests/: test_computers.cpp
